# bem-classic

.github/workflows/: build.yml
demo/: LICENSE  Makefile  launcher.sh  pyproject.toml  setup.cfg
demo/src/classicdemo/: config.py  settings.py
patterns/simple/: emit.sh  install.sh  run.sh  stage.sh
patterns/simple/runners/: run_tests.sh
patterns/simple/superuser/: setup.sh
patterns/simple/user/: stage.sh
patterns/standard/: emit.sh
patterns/standard/runners/: show_versions.sh
patterns/standard/superuser/: setup.sh
